fix(rest-api): improve getUserMember performance
Only groups are used to get the associated members. So, get from the repository directly without using apiService and its long to execute `convert` method allows to quickly obtain groupIds.

https://gravitee.atlassian.net/browse/APIM-1596